# ffxiv-crafting-algo

./: Cargo.toml  README.md
src/: main.rs
